[project]
name = "sarad"
version = "1.0.19"
description = "Library and sample application to collect data from SARAD instruments."
authors = [
    {name = "Michael Strey", email = "strey@sarad.de"},
]
dependencies = [
    "pyserial>=3.5",
    "hashids>=1.3.1",
    "pyyaml>=6.0.1",
    "bitvector>=3.5.0",
    "overrides>=7.7.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "sphinx; sys_platform == \"linux\"",
    "sphinx-autodoc-typehints; sys_platform == \"linux\"",
    "sphinxcontrib-plantuml; sys_platform == \"linux\"",
    "sphinx-autoapi; sys_platform == \"linux\"",
    "towncrier",
]

[tool.towncrier]
directory = "doc/changes"
filename = "CHANGELOG.rst"
package = "sarad"
package_dir = "src"
title_format = "v{version} ({project_date})"
underlines = ["-", "^", "\""]